typo in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
   notebook:
     image: jhudatascience/docker-notebook
     volumes:
-      - "PWD":/home/jovyan/work
+      - "$PWD":/home/jovyan/work
     ports:
       - 8888:8888
